--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -23,4 +23,8 @@
     <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\submodules\Interfaces\Interfaces.csproj" />
+  </ItemGroup>
+
 </Project>
