Adding compression and QRCode generator

--- a/GUI/Upsilon.Apps.Passkey.GUI.csproj
+++ b/GUI/Upsilon.Apps.Passkey.GUI.csproj
@@ -24,6 +24,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="QRCodeEncoderLibrary">
+      <HintPath>dll\QRCodeEncoderLibrary.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
     <None Update="raw\vidpll-sVqi93MN9TymqpQ==UGOcrUlBjHsiPMUpOVwOKjiSUBw=\vidpll-sVqi93MN9TymqpQ==UGOcrUlBjHsiPMUpOVwOKjiSUBw=.pkl">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
