--- a/GUI/Upsilon.Apps.Passkey.GUI.csproj
+++ b/GUI/Upsilon.Apps.Passkey.GUI.csproj
@@ -20,6 +20,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Drawing.Common" Version="9.0.10" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Core\Upsilon.Apps.Passkey.Core.csproj" />
   </ItemGroup>
 
