--- a/.github/workflows/csharp-dotnet.yml
+++ b/.github/workflows/csharp-dotnet.yml
@@ -1,4 +1,4 @@
-name: C# Build with CMake
+name: C# Build with Dot Net
 
 on:
   push:
@@ -15,7 +15,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
-        dotnet-version: 8.0.x
+        dotnet-version: 10.0.x
         
     - name: Restore dependencies
       run: dotnet restore Upsilon.Apps.Passkey.sln
