--- a/.github/workflows/csharp-dotnet-linux.yml
+++ b/.github/workflows/csharp-dotnet-linux.yml
@@ -1,4 +1,4 @@
-name: C# Build with Dot Net
+name: C# Build with Dot Net - Linux
 
 on:
   push:
@@ -8,7 +8,7 @@ on:
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     
     steps:
     - uses: actions/checkout@v4
@@ -18,16 +18,16 @@ jobs:
         dotnet-version: 10.0.x
         
     - name: Restore dependencies
-      run: dotnet restore Upsilon.Apps.Passkey.slnx
+      run: dotnet restore Upsilon.Apps.Passkey.Linux.slnx
       
     - name: Build Debug
-      run: dotnet build Upsilon.Apps.Passkey.slnx --no-restore --configuration Debug
+      run: dotnet build Upsilon.Apps.Passkey.Linux.slnx --no-restore --configuration Debug
       
     - name: Build Relesae
-      run: dotnet build Upsilon.Apps.Passkey.slnx --no-restore --configuration Release
+      run: dotnet build Upsilon.Apps.Passkey.Linux.slnx --no-restore --configuration Release
             
     - name: Test
-      run: dotnet test --no-build --verbosity normal Upsilon.Apps.Passkey.slnx
+      run: dotnet test --no-build --verbosity normal Upsilon.Apps.Passkey.Linux.slnx
 
 
 permissions:
