Debug settings update

--- a/GUI/WPF/Properties/launchSettings.json
+++ b/GUI/WPF/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "Upsilon.Apps.Passkey.GUI.WPF": {
       "commandName": "Project",
       "commandLineArgs": "\"vidpll-sVqi93MN9TymqpQ==UGOcrUlBjHsiPMUpOVwOKjiSUBw=.pku\"",
-      "workingDirectory": "raw"
+      "workingDirectory": "bin\\Debug\\net10.0-windows10.0.18362.0\\raw"
     }
   }
 }
